Convert project to Spring Boot application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ demo.retry.initialBackoffMs=500
 
 # Producer behavior
 demo.producer.messages.per.second=1
+
+# Application mode: producer | consumer | both
+demo.mode=producer
