--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Kafka broker and schema registry
-demo.kafka.bootstrap.servers=localhost:9092
-demo.schema.registry.url=http://localhost:8081
+demo.kafka.bootstrap-servers=localhost:9092
+demo.kafka.schema-registry-url=http://localhost:8081
 
 # Topics
 demo.topic.orders=orders
@@ -8,23 +8,23 @@ demo.topic.retry=orders-retry
 demo.topic.dlq=orders-dlq
 
 # Producer configuration
-demo.producer.clientId=order-producer
-demo.producer.linger.ms=20
-demo.producer.batch.size=16384
+demo.producer.client-id=order-producer
+demo.producer.linger-ms=20
+demo.producer.batch-size=16384
 demo.producer.retries=5
 demo.producer.acks=all
 
 # Consumer configuration
-demo.consumer.group.id=order-consumer-group
-demo.consumer.client.id=order-consumer
-demo.consumer.max.poll.records=50
+demo.consumer.group-id=order-consumer-group
+demo.consumer.client-id=order-consumer
+demo.consumer.max-poll-records=50
 
 # Retry configuration
-demo.retry.maxAttempts=3
-demo.retry.initialBackoffMs=500
+demo.retry.max-attempts=3
+demo.retry.initial-backoff-ms=500
 
 # Producer behavior
-demo.producer.messages.per.second=1
+demo.producer.messages-per-second=1
 
 # Application mode: producer | consumer | both
 demo.mode=producer
