Add schema registry authentication settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Kafka broker and schema registry
 demo.kafka.bootstrap-servers=localhost:9092
 demo.kafka.schema-registry-url=http://localhost:8081
+demo.kafka.schema-registry-auth-credentials-source=USER_INFO
+demo.kafka.schema-registry-auth-user-info=your-username:your-password
 
 # Topics
 demo.topic.orders=orders
