Convert Spring Kafka app to plain Java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ demo.kafka.schema-registry-auth-user-info=your-username:your-password
 demo.topic.orders=orders
 demo.topic.retry=orders-retry
 demo.topic.dlq=orders-dlq
+demo.topic.average=orders-average
 
 # Producer configuration
 demo.producer.client-id=order-producer
@@ -28,5 +29,5 @@ demo.retry.initial-backoff-ms=500
 # Producer behavior
 demo.producer.messages-per-second=1
 
-# Application mode: producer | consumer | both
+# Application mode: producer | consumer | both (used only for reference)
 demo.mode=producer
